# Mimir

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  package.json  pnpm-lock.yaml
services/api/: .env.example  README.md  alembic.ini  pyproject.toml  railway.json
services/api/app/: __init__.py  main.py
services/api/app/api/: __init__.py  deps.py  error_handlers.py  errors.py  middleware.py
services/api/app/api/v1/: health.py  router.py  tasks.py
services/api/app/application/: __init__.py  invocation_contracts.py
services/api/app/application/dto/: __init__.py  clarification.py  delivery.py  feedback.py  invocation.py  research.py  tasks.py
services/api/app/application/parsers/: __init__.py  clarification.py  requirement.py
services/api/app/application/policies/: __init__.py  activity_lock.py  ip_quota.py
services/api/app/application/ports/: delivery.py  llm.py  research.py  security.py
services/api/app/application/prompts/: __init__.py  clarification.py  collection.py  delivery.py  feedback.py  (+1 more)
services/api/app/core/: __init__.py  config.py  database_url.py  ids.py  json_utils.py  logging.py  retry.py
services/api/app/domain/: __init__.py  enums.py  exceptions.py  schemas.py  state_machine.py  tokens.py
services/api/app/infrastructure/: providers.py
services/api/e2b_template/: README.md  e2b.Dockerfile
services/api/tests/: __init__.py  conftest.py
services/api/tests/fixtures/: __init__.py  app.py  db.py  runtime.py  storage.py  tasks.py
services/api/tests/unit/: test_app_factory.py  test_async_harness.py  test_fixture_exports.py
(+199 files in other folders)
